Fixed front page, no borders, subway diagram dark mode in img

--- a/style.css
+++ b/style.css
@@ -15,16 +15,40 @@ body {
 
 .frontpanel {
     flex: 1;
-    border: 10px solid white;
     
 }
 
 #top-right {
     flex: 1;
-    border: 3px solid blue;
+    align-items: center;
+    display: flex;
+    width: 600px;
+}
+
+.herotitle {
+    flex: 1;
+    text-transform: uppercase;
+    font-size: 50px;
+    font-family: 'Jost', sans-serif;
+    font-weight: 700;
 }
 
 #bottom-right {
     flex: 1;
-    border: 3px solid blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+    font-size: 25px;
+}
+
+.front-options {
+    cursor: pointer;
+    transition: all .1s ease-in-out;
+    transform-origin: left;
+    font-family: 'Jost', sans-serif;
+}
+
+.front-options:hover {
+    transform: scale(1.2);
 }
